Updated jquery ui dialog to work correctly on mobile

--- a/ui.apps/src/main/content/jcr_root/etc/designs/we-retail/clientlib-site/less/components/jqui-widget.less
+++ b/ui.apps/src/main/content/jcr_root/etc/designs/we-retail/clientlib-site/less/components/jqui-widget.less
@@ -1,4 +1,7 @@
+
 .ui-dialog {
+
+    max-width: 100vw;
 
     .ui-dialog-titlebar {
         background: transparent;
@@ -11,4 +14,11 @@
             border: 0;
         }
     }
+
+    .product-viewer {
+        img {
+            max-width: 100%;
+        }
+    }
 }
+
